fix(core): vertical nav header spacing updated

--- a/typescript-version/full-version/src/@core/scss/_utils.scss
+++ b/typescript-version/full-version/src/@core/scss/_utils.scss
@@ -184,8 +184,8 @@ $gap: (
   @if $start-at {
     @return string.slice(
       #{$var},
-      string.index(#{$var}, " ") + 1,
-      -1
+      0,
+      $start-at
     );
   } @else {
     @return $var;
