--- a/typescript-version/full-version/src/@core/scss/_variables.scss
+++ b/typescript-version/full-version/src/@core/scss/_variables.scss
@@ -68,7 +68,7 @@ $vertical-nav-background-color: rgb(#{$vertical-nav-background-color-rgb}) !defa
 // ℹ️ This is used to keep consistency between nav items and nav header left & right margin
 // This is used by nav items & nav header
 $vertical-nav-horizontal-spacing: 0 1.125rem !default;
-$vertical-nav-horizontal-padding: 1.25rem 1rem !default;
+$vertical-nav-horizontal-padding: 1.375rem 1rem !default;
 
 /*
   ℹ️ We created this SCSS var to extract the start padding
@@ -85,7 +85,7 @@ $vertical-nav-header-height: $layout-vertical-nav-navbar-height !default;
 $vertical-nav-navbar-shadow: 0 4px 8px -4px rgb(94 86 105 / 42%);
 
 // Vertical nav header padding
-$vertical-nav-header-padding: 1rem $vertical-nav-horizontal-padding-start !default;
+$vertical-nav-header-padding: 1rem 0.25rem 1rem $vertical-nav-horizontal-padding-start !default;
 $vertical-nav-header-inline-spacing: $vertical-nav-horizontal-spacing !default;
 
 // Space between logo and title
